--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /src/Python/PythonLearning/.vs/PythonLearning/v15/.suo
+/src/Python/PythonLearning/.vs/loop/v15/.suo
